--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swiper": "^11.1.14",
     "vue": "^3.5.3",
     "vue-router": "^4.0.3",
+    "vuescroll": "^4.18.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
