--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
     "normalize.css": "^8.0.1",
-    "swiper": "^11.1.14",
+    "pdfjs-dist": "^4.9.155",
+    "swiper": "^11.1.15",
     "vue": "^3.5.3",
     "vue-router": "^4.0.3",
     "vuescroll": "5.0.1",
