--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "dev:test": "vite --mode test",
     "build": "vite build",
     "build:test": "vite build --mode test",
