--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
+    "element-plus": "^2.9.2",
     "normalize.css": "^8.0.1",
     "pdfjs-dist": "^4.9.155",
     "swiper": "^11.1.15",
@@ -39,8 +40,8 @@
     "sass-loader": "^16.0.2",
     "terser": "^5.24.0",
     "typescript": "^5.0.2",
-    "unplugin-auto-import": "^0.18.3",
-    "unplugin-vue-components": "^0.27.4",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-vue-components": "^28.0.0",
     "vite": "^5.4.8",
     "vite-plugin-require-transform": "^1.0.21",
     "vue-tsc": "^1.8.5"
