--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,2 @@
 NODE_ENV=production
-# VITE_BASE_URL=http://10.125.60.80:9009
-VITE_BASE_URL=http://localhost:9009
+VITE_BASE_URL=http://10.141.18.10:9009
