--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 NODE_ENV=development
 VITE_BASE_URL=http://localhost:9009
-VITE_FILE_BASE_URL=http://localhost:9009
+# VITE_FILE_BASE_URL=http://localhost:9009
+VITE_FILE_BASE_URL=http://10.141.18.10:9009
