--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "unplugin-vue-components": "^28.0.0",
     "vite": "^5.4.8",
     "vite-plugin-require-transform": "^1.0.21",
+    "vite-plugin-top-level-await": "^1.5.0",
     "vue-tsc": "^1.8.5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
